# dgg-tui

./: Cargo.toml  README.md  config.json
src/: config.rs  lib.rs  main.rs  network.rs  ui.rs  ws_error.rs
src/chat/: action.rs  api.rs  command.rs  dgg.rs  event.rs  features.rs  message.rs  mod.rs  state.rs  user.rs
src/ui/: chat_input.rs  chat_input_history.rs  emotes.rs  list_itemable.rs  mod.rs  parser.rs  render.rs  suggester.rs  window.rs
