[package]
name = "dgg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.86"
serde = { version = "1.0.145", features = ["derive"] }
tungstenite = { version = "0.17.3", features = ["native-tls"] }
reqwest = { version= "0.11.12", features = ["blocking", "json"] }
url = "2.3.1"
tui = "0.19.0"
tui-textarea = "0.1.6"
crossterm = "0.25"
textwrap = "0.15"