[package]
name = "dgg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.86"
serde = { version = "1.0.145", features = ["derive"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
futures = "0.3.24"
reqwest = { version= "0.11.12", features = ["blocking", "json"] }
tui = "0.19.0"
crossterm = "0.25"
textwrap = "0.15"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dirs = "4.0.0"